fix: js menu mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
         </nav>
 
-        <div id="mobile-menu" class="hidden w-fit transition duration-1000 h-screen z-50 bg-color-primary p-8 mt-[-13px] font-semibold absolute right-[-100%] top-0 lg:hidden">
+        <div id="mobile-menu" class="hidden w-fit transition duration-1000 h-screen z-50 bg-color-primary p-8 mt-[-13px] font-semibold absolute -right-[18rem] top-0 lg:hidden">
             <button id="mobile-close">
                 <span class="material-symbols-outlined p-3 font-bold text-2xl text-aux-color">
                 close
