--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="card w-[15rem] h-[26rem] bg-color-text m-8 rounded-3xl text-bg-color flex flex-col justify-evenly items-center p-6 gap-3 text-center shadow-2xl --">
                 <h2 class="text-xl  font-semibold">Full Face</h2> 
-                <p class="text-sm">Analise da face do paciente como um todo, e não apenas o local que lhe incomoda, a fim devolver os coxins de gordura que são absorvidos com a idade.</p>
+                <p class="text-sm">Análise da face do paciente como um todo, a fim devolver os coxins de gordura que são absorvidos com a idade.</p>
                 <div class="text-xs bg-bg-color rounded-xl p-2 ">
                     <a href="#" target="_blank" rel="noopener noreferrer" class="flex gap-2 items-center" >
                         <span class="material-symbols-outlined text-color-text">
