--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="text-bg-color">
             <h2 class="text-2xl font-semibold lg:text-4xl lg:font-normal">Sobre Mim</h2>
             <p class="font-semibold text-xs py-2">Sou a Dra Mariana Rodrigues, dentista especializada em harmonização facial. Dedico minha carreira a evidenciar a beleza e transformar vidas através da estética facial.
-            Minha missão é realçar a beleza natural dos meus pacientes, com resultados autênticos e personalizados. Orgulho-me de ser uma referência em procedimentos de lábios e full face.</p>
+            <br>Minha missão é realçar a beleza natural dos meus pacientes, com resultados autênticos e personalizados. Orgulho-me de ser uma referência em procedimentos de lábios e full face.</p>
             <div class="flex items-center gap-3 py-4">
                 <a href="https://www.instagram.com/dra_marianarodriguess/" target="_blank" rel="noopener noreferrer" class="w-10 md:w-16">
                     <img src="./img/insta.png" alt="Instagram">
