feat: update section depoimentos

--- a/index.html
+++ b/index.html
@@ -173,36 +173,36 @@
             </div>
         </section>
             
-        <section id="depoimentos" class="bg-color-primary bg-[url(./img/img3.jpg)] bg-cover overflow-y-scroll no-scrollbar h-[500px]">
+        <section id="depoimentos" class=" bg-color-primary bg-[url(./img/img3.jpg)] bg-cover overflow-y-scroll no-scrollbar h-fit">
             <div class="h-64 text-center text-aux-color pt-2">
                 <h2 class="text-3xl p-6">Depoimentos</h2>
                 <div class="relative">
                     <div class="flex justify-start items-start bg-aux-color absolute left-4 rounded-2xl w-[80%] md:w-[60%] text-color-text text-left p-4 ">
-                        <img src="./img/img1.jpg" alt="depoimento1" class="rounded-full w-12 h-12">
+                        <img src="./img/dpo1.png" alt="depoimento1" class="rounded-full w-12 h-12">
                         <div class="px-6">
-                            <h3 class="font-bold">Nome Bla bla</h3>
-                            <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia error cumque dolore molestias officia laudantium</p>
+                            <h3 class="font-bold">roseanevellasco</h3>
+                            <p class="text-xs">Minha dentista linda 😍 a melhor !!</p>
                         </div>
                     </div>
-                    <div class="flex justify-start items-start bg-aux-color right-4 top-[10rem] absolute rounded-2xl w-[80%] md:w-[60%] text-color-text text-left p-4">
-                        <img src="./img/img1.jpg" alt="depoimento1" class="rounded-full w-12 h-12">
+                    <div class="flex justify-start items-start bg-aux-color right-4 top-[7rem] absolute rounded-2xl w-[80%] md:w-[60%] text-color-text text-left p-4">
+                        <img src="./img/dpo2.png" alt="depoimento2" class="rounded-full w-12 h-12">
                         <div class="px-6">
-                            <h3 class="font-bold">Nome Bla bla</h3>
-                            <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia error cumque dolore molestias officia laudantium</p>
+                            <h3 class="font-bold">junqueira_beta</h3>
+                            <p class="text-xs">Obrigada pelo carinho, por me deixar com essa boca ❤️ 😍 amo!</p>
                         </div>
                     </div>
-                    <div class="flex justify-start items-start  bg-aux-color absolute left-4 top-[20rem] rounded-2xl w-[80%] md:w-[60%] text-color-text text-left p-4">
-                        <img src="./img/img1.jpg" alt="depoimento1" class="rounded-full w-12 h-12">
+                    <div class="flex justify-start items-start  bg-aux-color absolute left-4 top-[14rem] rounded-2xl w-[80%] md:w-[60%] text-color-text text-left p-4">
+                        <img src="./img/dpo3.png" alt="depoimento3" class="rounded-full w-12 h-12">
                         <div class="px-6">
-                            <h3 class="font-bold">Nome Bla bla</h3>
-                            <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia error cumque dolore molestias officia laudantium</p>
+                            <h3 class="font-bold">leandrabru_</h3>
+                            <p class="text-xs">Amei e já quero mais 😅❤️✨</p>
                         </div>
                     </div>
-                    <div class="flex justify-start items-start  bg-aux-color right-4 top-[30rem] absolute rounded-2xl w-[80%] md:w-[60%] text-color-text text-left p-4">
-                        <img src="./img/img1.jpg" alt="depoimento1" class="rounded-full w-12 h-12">
+                    <div class="flex justify-start items-start  bg-aux-color right-4 top-[21rem] absolute rounded-2xl w-[80%] md:w-[60%] text-color-text text-left p-4">
+                        <img src="./img/dpo4.png" alt="depoimento4" class="rounded-full w-12 h-12">
                         <div class="px-6">
-                            <h3 class="font-bold">Nome Bla bla</h3>
-                            <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia error cumque dolore molestias officia laudantium</p>
+                            <h3 class="font-bold">rayanneguarany</h3>
+                            <p class="text-xs">Perfeiçãooo, você é a melhor 100% Tive uma experiência maravilhosa com meu preenchimento labial… gratidão ✨❤️</p>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
     
         </section>
 
-      <section id="location" class="bg-bg-color flex flex-col items-center justify-center h-fit">
+      <section id="location" class="bg-bg-color flex flex-col items-center justify-center h-fit mt-3">
             <h2 class="text-3xl pt-2 mt-4">Venha conhecer</h2>
             <p>Será um prazer te receber aqui!</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29401.68224618347!2d-43.128578907150995!3d-22.90561354073852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9983fb389abaa1%3A0x39be736e0658afec!2zSWNhcmHDrSwgTml0ZXLDs2kgLSBSSg!5e0!3m2!1spt-BR!2sbr!4v1722460154374!5m2!1spt-BR!2sbr" width="0" height="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="p-4 rounded-2xl w-[90%] h-[70%]"></iframe>
