feat: add meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Dra Mariana</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Dra Mariana Rodrigues"/>
+    <meta property="og:image" content="/img/foto1.png"/>
+    <meta property="og:description" content="Sou a Dra Mariana Rodrigues, dentista especializada em harmonização facial e esse é meu site."/>
+    <meta property="og:site_name" content="Dra Mariana Rodrigues"/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
